# AI-Tutor-agentic-rag

./: .gitignore  README.md  app_flask_ai_tutor.py  container-group-template.yaml  docker-compose.yml  readme.txt  requirements.txt
data/: document.txt
flask-server/: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  LangGraph_ai_tutor.ipynb  README.md  Rag_test.ipynb  agentic-rag-ai-tutor-LangGraph.py  agentic-rag-ai-tutor.py  app_ai_tutor.py  config.py  filter_requirements.py  pyproject.toml  requirements.txt  test.py
flask-server/LangGraph_examples/: langGraph_chat_example.ipynb
flask-server/aiTutorAgent/: AiTutorAgent.py  __init__.py  aiTutorAgent.py  chat_history_mongodb.py
flask-server/course_material/: week_folder_generation.bat
flask-server/data/: topic_material.txt
flask-server/rag/: CourseStructureStore.py  Document_loader.py  FAISS_vector_stores.py  MongoDB_vector_stores.py  RAG.py  README.md  __init__.py  rag.py
flask-server/utils/: logging_config.py
rag-client--app/: package-lock.json  package.json
rag-client--app/src/: App.jsx  main.jsx
rag-client--app/src/components/: TutorChat.jsx  TutorInteraction.jsx
react-client/: .dockerignore  .env.template  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
react-client/public/: config.js
react-client/src/: App.css  App.jsx  TweetGenerator.jsx  index.css  main.jsx
react-client/src/components/: Admin.jsx  Login.jsx  Modal.jsx  (+5 more)
react-client/styles/: Admin.css  Login.css  Preloader.css  TutorInteraction.css  modal.css
(+1 files in other folders)
