[project]
name = "flask-server"
version = "0.1.0"
description = "AI Tutor Agent Flask Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.10.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.1.2",
    "langgraph>=0.3.21",
    "langgraph-checkpoint-mongodb>=0.1.2",
    "langsmith>=0.3.19",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pymongo>=4.11.3",
    "pypdf>=5.4.0",
    "python-pptx>=1.0.2",
]
